invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_97.src
.IPPcode24
SETCHAR LF@d int@49 string@henlo LF@a